--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "express-api-queryhandler": "^0.4.3",
     "fastest-validator": "^0.6.10",
+    "firebase-admin": "^6.3.0",
     "jsonwebtoken": "^8.3.0",
     "keymirror": "^0.1.1",
     "moment": "^2.22.2",
@@ -22,5 +23,9 @@
     "no-kafka": "^3.3.5",
     "sequelize": "^4.38.0",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
